--- a/app/assets/stylesheets/molecules/M_PersonBig.scss
+++ b/app/assets/stylesheets/molecules/M_PersonBig.scss
@@ -1,4 +1,4 @@
-.M_Person {
+.M_PersonBig {
     display: flex;
     gap: 10px;
     align-items: center;
