--- a/app/assets/stylesheets/molecules/M_RectangleCoverCard.scss
+++ b/app/assets/stylesheets/molecules/M_RectangleCoverCard.scss
@@ -5,4 +5,8 @@
     background-color: var(--dark-gray);
     padding: 20px;
     border-radius: 16px;
+    
+    .M_TextInCards {
+        text-align: left;
+    }
 }
